# lil

./: lil.wrap  meson.build
include/lil/: imports.h  intel.h  pch.h  vbt-types.h  vbt.h
src/: edid.c  gmbus.cpp  helpers.h  intel.c  lvds.c  pci.h  regs.h
src/coffee_lake/: cfl.c  crtc.c  dp.c  dp.cpp  dp.h  plane.c
src/ivy_bridge/: crtc.c  gtt.c  interrupt.c  ivb.c  plane.c
src/kaby_lake/: README.md  avi.c  cdclk.c  crtc.c  ddi-translations.c  ddi-translations.h  ddi.c  disable.c  dp-aux.cpp  dp-aux.h  dp.c  dp.h  dpcd.cpp  edp.c  encoder.c  gtt.c  gtt.h  hdmi.c  hpd.c  kbl.c  kbl.h  link-training.c  pch.c  pch.h  pci.c  pcode.c  pipe.c  plane.c  plane.h  pll.c  setup.c  transcoder.c
src/kaby_lake/inc/: ddi-translations.h  dpcd.h  hpd.h  kbl.h  plane.h
src/vbt/: fw_cfg.c  opregion.h  parsing.c  vbt.c
utils/nv/: main.cpp  spec.hpp  vbios.cpp
utils/vbt/: vbt.c
